2008-04-12 Dodji Seketeli <dodji@gnome.org>

	* src/main.cc: reorganised the command line options parsing.
	  Added init_option_context() to - guess what - initialize the option
	  context and add the nemiver and gtk+ groups to it, so that both gtk+
	  and nemiver options can be available. That way, both nemiver and gtk+
	  help messages can be displayed.
	  Make sure parse_command_line() does initialize the option context
	  by calling the brand new init_option_context(), before actually
	  trying to parse the command line.
	  This should fix
	  #527696 – nemiver --help only shows libgnome related help messages

2008-04-11 Dodji Seketeli <dodji@gnome.org>

	* configure.ac: make sure to AC_SUBST the deps versions number
	  variables so that we can use them in foo.in files like *.pc.in files.
	* src/common/libnemivercommon.pc.in: make sure to add ligtop to the
	  list of deps in the generated libnemivercommon.pc file.
	  This should fix bug #526826 – missing dependency in .pc file

2008-04-11 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdbmi-parser.cc: fix a parsing bug that happens
	  when setting a pending breakpoint on a fully qualified function.
	* tests/test-gdbmi.cc: add a regression test for this bugfix.
	  This entry should fix bug #526866

2008-04-08  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/persp/dbgperspective/nmv-memory-view.cc: properly set memory editor
	widget to insensitive when the debugger is running.  Otherwise the user
	could change the memory values and it would attempt to send those values to
	gdb when it wasn't ready for them.

2008-04-08 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-i-debugger.h:
	  add IDebugger::is_attached_to_target() to let
	  client know if IDebugger is attached to a target or not.
	* src/dbgengine/nmv-gdb-engine.cc:
	  basically track when we are attached to a target or not.
	* src/persp/dbgperspective/nmv-dbg-perspective.cc:
	  When we detach from a target, the "detach from target" menu